@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.9 ===
+* Updated smword_t and umword_t type definitions.
 
 === 1.0.8 ===
 * Added range definitions for umword_t and smword_t types.
